# georust_book

./: .gitignore  Cargo.toml  README.md  book.toml
.github/workflows/: test.yml
assets/css/: style.css
src/: SUMMARY.md  contact.md  creature-feature.md  feature-creek.md  intro.md  join-the-party.md  lib.rs  license.md  rss.xml  youre-projecting.md
src/data/: DPR_Concessions_001.json  index.md  philly_waterways.csv
