[package]
name = "cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Article 1 - WKT and projections

geo = "0.22.0"
proj = "0.27.0"
# NOTE: serde feature is only used for Article 2
wkt = { version = "0.10.3", features = ["serde"] }

# Article 2 - features: CSV and GeoJSON

csv = { version = "1.1.6" }
geojson = { version = "0.23.0" }
serde = { version = "1.0.137", features = ["derive"] }
approx = "0.5.1"
# also proj, geo, and wkt
# TODO: separate each article into a different crate so I can include the redundant crates, like geo/wkt in each example. I think this will make it easier to include the reqs in each article.

# Article 3 - spatial joins

[patch.crates-io]
# Unreleased geo/types: https://github.com/georust/geo/pull/880 contains 4 all
# geo = { path = "../geo/geo" }
# geo-types = { path = "../geo/geo-types" }
geo = { git = "https://github.com/georust/geo" }
geo-types = { git = "https://github.com/georust/geo" }

# Proposed geojson: custom structs with serde
# geojson = { path = "../geojson" }
geojson = { git = "https://github.com/georust/geojson", branch = "mkirk/serde" }
